# steam-deals-backend

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .secrets.toml  Dockerfile  Dockerfile.CI  Dockerfile.DEVELOPMENT  Dockerfile.PRODUCTION  LICENSE  Makefile  README.md  docker-compose.DEVELOPMENT.yml  docker-compose.PRODUCTION.yml  index.html  pyproject.toml  settings.toml  setup.cfg  sonar-project.properties  traefik.PRODUCTION.toml
nwta/: main.py
nwta/v1/: api.py
nwta/v1/routers/: __init__.py
scripts/: check-forbidden-files.sh  secrets-create.sh
steam_deals/: config.py  main.py
steam_deals/core/: apps.py  authentication.py  exception.py  logger.py  requests.py  security.py  utils.py  verification.py
steam_deals/core/db/: __init__.py  session.py
steam_deals/core/db/crud/: __init__.py  apps.py  follows.py  users.py
steam_deals/core/db/sql_utils/: erd.pgerd  schema.sql
steam_deals/core/models/: __init__.py  app.py  follow.py  user.py
steam_deals/core/schemas/: __init__.py  app.py  follow.py  index.py  token.py  user.py  utils.py
steam_deals/core/templates/: email_template.html  verified.html
steam_deals/v1/: api.py
steam_deals/v1/routers/: __init__.py  access.py  apps.py  authentication.py  follow.py  me.py  users.py
tests/: conftest.py  test_app.py
tests/functional/: conftest.py  test_authentication.py  test_me.py  test_users.py
