[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'pip ~= 22.0.4',
    'setuptools ~= 60.10.0',
    'wheel ~= 0.37.1',
]

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.pytest.ini_options]
addopts = [
    '--cov=steam_deals',
    '--cov-report=term-missing',
    '--cov-report=html:artifacts/htmlcov',
    '--cov-report=xml:artifacts/coverage.xml',
]
