[metadata]
name = steam-deals-backend
description = Backend of the project carried out during the `Application Development Tools` classes
url = https://gitlab.com/rafit/steam-deals-backend
author = 'Kamil Chrobok, Mateusz Żebrak, Rafał Żyła',
author_email = 'kchrobok.contact@gmail.com, mateusz.zebrak@gmail.com, rafal.zyla99@gmail.com',

[options]
packages = find:
python_requires = >=3.8
install_requires=
    pytest~=7.0.1
    fastapi[all]~=0.74.1
    pylint~=2.12.2
    black~=22.1.0

[options.packages.find]
exclude =
    tests
    tests.*
