[metadata]
name = steam-deals-backend
description = Backend of the project carried out during the `Application Development Tools` classes
url = https://gitlab.com/rafit/steam-deals-backend
author = 'Kamil Chrobok, Mateusz Żebrak, Rafał Żyła',
author_email = 'kchrobok.contact@gmail.com, mateusz.zebrak@gmail.com, rafal.zyla99@gmail.com',

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fastapi[all] ~= 0.74.1
    dynaconf ~= 3.1.7
    gitpython ~= 3.1.27
    sqlalchemy ~= 1.4.32
    psycopg2-binary ~= 2.9.3
    pytz ~= 2022.1
    python-jose[cryptography] ~= 3.3.0
    passlib[bcrypt] ~= 1.7.4

[options.extras_require]
dev =
    pytest ~= 7.0.1
    pytest-cov ~= 3.0.0
    pylint ~= 2.12.2
    black ~= 22.3.0
    pre-commit ~= 2.17.0

[options.packages.find]
exclude =
    tests
    tests.*

[options.entry_points]
console_scripts =
    steam-deals = steam_deals.main:main
